# HexapodMath

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: cmake-single-platform.yml
Inc/: additional_functions.h  conversion_2d.h  hexapod.h  matrix_3d.h
Src/: additional_functions.c  conversion_2d.c  forward_kinematics.c  hexapod.c  inverse_kinematics.c  matrix_3d.c  pose.c
Test/: AdditionalFunctions_Test.c  AdditionalFunctions_TestRunner.c  ForwardKinematics_Test.c  ForwardKinematics_TestRunner.c  HexapodMath_Test.c  HexapodMath_TestRunner.c  Hexapod_Test.c  InverseKinematics_Test.c  InverseKinematics_TestRunner.c  Matrix3D_Test.c  Matrix3D_TestRunner.c  Runner.c
include/hexapodmath/: forward_kinematics.h  hexapod.h  inverse_kinematics.h  matrix_3d.h  pose.h
src/: CMakeLists.txt  additional_functions.c  conversion_2d.c  forward_kinematics.c  hexapod.c  inverse_kinematics.c  matrix_3d.c  pose.c
tests/: AdditionalFunctions_Test.c  AdditionalFunctions_TestRunner.c  CMakeLists.txt  ForwardKinematics_Test.c  ForwardKinematics_TestRunner.c  HexapodMath_Test.c  Hexapod_Test.c  Hexapod_TestRunner.c  InverseKinematics_Test.c  Matrix3D_Test.c  Runner.c
